--- a/gitops/apps/unifi-network-application/deployment-unifi-controller.yaml
+++ b/gitops/apps/unifi-network-application/deployment-unifi-controller.yaml
@@ -51,7 +51,7 @@ spec:
             - name: MONGO_DBNAME
               value: "unifi"
             - name: MONGO_AUTHSOURCE
-              value: "unifi"
+              value: "admin"
 
           ports:
             - name: unifi-discovery
