--- a/gitops/apps/unifi-network-application/ingress.yaml
+++ b/gitops/apps/unifi-network-application/ingress.yaml
@@ -8,10 +8,8 @@ metadata:
   annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
-    # Use HTTPS for backend connection since UniFi controller uses HTTPS on port 8443
-    traefik.ingress.kubernetes.io/service.serversscheme: https
-    traefik.ingress.kubernetes.io/service.serversport: "8443"
-    # TLS verification is skipped globally via --serversTransport.insecureSkipVerify=true
+    # Ensure forwarded headers are set correctly so UniFi knows original request was HTTPS
+    traefik.ingress.kubernetes.io/headers.customrequestheaders: "X-Forwarded-Proto: https"
     external-dns.alpha.kubernetes.io/hostname: unifi.amer.home
     external-dns.alpha.kubernetes.io/ttl: "3600"
     external-dns.alpha.kubernetes.io/manage-record-types: "A"
@@ -31,5 +29,5 @@ spec:
               service:
                 name: unifi-controller
                 port:
-                  number: 8443
+                  number: 8080
 
