--- a/gitops/apps/unifi-network-application/ingress.yaml
+++ b/gitops/apps/unifi-network-application/ingress.yaml
@@ -9,7 +9,8 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     # Use middleware to set forwarded headers so UniFi knows original request was HTTPS
-    traefik.ingress.kubernetes.io/router.middlewares: unifi-network-application-unifi-forwarded-headers@kubernetescrd
+    # Format: namespace-name@kubernetescrd (for same namespace, try both formats)
+    traefik.ingress.kubernetes.io/router.middlewares: unifi-forwarded-headers@kubernetescrd
     external-dns.alpha.kubernetes.io/hostname: unifi.amer.home
     external-dns.alpha.kubernetes.io/ttl: "3600"
     external-dns.alpha.kubernetes.io/manage-record-types: "A"
