--- a/gitops/infra/dns/configmap.yaml
+++ b/gitops/infra/dns/configmap.yaml
@@ -31,6 +31,7 @@ data:
       type master;
       file "/var/cache/bind/amer.home.db";
       allow-update { key "externaldns-key."; };
+      allow-transfer { key "externaldns-key."; };
     };
 
     zone "20.100.10.in-addr.arpa" IN {
