--- a/gitops/apps/pihole/values.yaml
+++ b/gitops/apps/pihole/values.yaml
@@ -35,9 +35,10 @@ dnsmasq:
     - server=/amer.home/10.100.20.241
     - server=/merenda.home.arpa/10.100.20.241
   # Reduce cache time for better DNS updates
+  # Keep small cache for external domains, but localTTL: 0 disables caching for local domains
   cacheSize: 1000
   negTTL: 0
-  localTTL: 0
+  localTTL: 0  # Disable caching for local domains (amer.home, merenda.home.arpa)
   # Disable negative caching to force fresh lookups
   noNegcache: true
 
@@ -47,11 +48,9 @@ extraEnvVars:
   TZ: "America/New_York"
   FTLCONF_LOCAL_IPV4: "10.100.20.240"
   PIHOLE_DNS_: "1.1.1.1;1.0.0.1;8.8.8.8;8.8.4.4"
-  # Force DNS cache refresh
+  # Force DNS cache refresh - respect TTL from upstream
   CACHE_QUERY_MINIMUM_TTL: "0"
   CACHE_QUERY_MAXIMUM_TTL: "300"
-  # Disable DNS caching for local domains
-  DNSMASQ_CACHE_SIZE: "0"
 
 # DoH (DNS over HTTPS) configuration
 doh:
