--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -15,6 +15,10 @@ spec:
       labels:
         app: homeassistant
     spec:
+      hostAliases:
+        - ip: "10.100.20.204"
+          hostnames:
+            - "unifi.amer.home"
       hostNetwork: true
       dnsPolicy: "None"
       dnsConfig:
