--- a/gitops/apps/home-assistant/configuration/scripts/smooth_transition.yaml
+++ b/gitops/apps/home-assistant/configuration/scripts/smooth_transition.yaml
@@ -58,144 +58,70 @@ smooth_transition:
           domain: input_datetime
   sequence:
     - variables:
-        default_s1: "06:00:00"
-        default_s2: "09:00:00"
-        default_s3: "17:00:00"
-        default_s4: "22:00:00"
+        # Global Defaults
+        global_s1: "{{ states('input_datetime.global_morning_start') }}"
+        global_s2: "{{ states('input_datetime.global_day_start') }}"
+        global_s3: "{{ states('input_datetime.global_evening_start') }}"
+        global_s4: "{{ states('input_datetime.global_night_start') }}"
 
-        # Check per-time-window custom times
-        morning_custom: >-
+        # Master Custom Switch
+        use_custom_schedule: >-
+          {% set helper = 'input_boolean.' ~ room ~ '_custom_schedule' %}
+          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable', None, ''] else false }}
+
+        # Per-Slot Custom Switches (Only relevant if use_custom_schedule is true)
+        use_custom_s1: >-
           {% set helper = 'input_boolean.' ~ room ~ '_morning_custom_time' %}
-          {% set state_val = states(helper) %}
-          {% if state_val not in ['unknown', 'unavailable', None, ''] %}
-            {{ is_state(helper, 'on') }}
-          {% elif custom_schedule_enabled is defined and custom_schedule_enabled != '' %}
-            {{ is_state(custom_schedule_enabled, 'on') }}
-          {% else %}
-            {{ false }}
-          {% endif %}
-        day_custom: >-
+          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
+        use_custom_s2: >-
           {% set helper = 'input_boolean.' ~ room ~ '_day_custom_time' %}
-          {% set state_val = states(helper) %}
-          {% if state_val not in ['unknown', 'unavailable', None, ''] %}
-            {{ is_state(helper, 'on') }}
-          {% elif custom_schedule_enabled is defined and custom_schedule_enabled != '' %}
-            {{ is_state(custom_schedule_enabled, 'on') }}
-          {% else %}
-            {{ false }}
-          {% endif %}
-        evening_custom: >-
+          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
+        use_custom_s3: >-
           {% set helper = 'input_boolean.' ~ room ~ '_evening_custom_time' %}
-          {% set state_val = states(helper) %}
-          {% if state_val not in ['unknown', 'unavailable', None, ''] %}
-            {{ is_state(helper, 'on') }}
-          {% elif custom_schedule_enabled is defined and custom_schedule_enabled != '' %}
-            {{ is_state(custom_schedule_enabled, 'on') }}
-          {% else %}
-            {{ false }}
-          {% endif %}
-        night_custom: >-
+          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
+        use_custom_s4: >-
           {% set helper = 'input_boolean.' ~ room ~ '_night_custom_time' %}
-          {% set state_val = states(helper) %}
-          {% if state_val not in ['unknown', 'unavailable', None, ''] %}
-            {{ is_state(helper, 'on') }}
-          {% elif custom_schedule_enabled is defined and custom_schedule_enabled != '' %}
-            {{ is_state(custom_schedule_enabled, 'on') }}
-          {% else %}
-            {{ false }}
-          {% endif %}
+          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
 
-        # Check if separate weekday/weekend times are enabled
-        morning_separate: >-
-          {% set helper = 'input_boolean.' ~ room ~ '_morning_separate_weekday_weekend' %}
-          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
-        day_separate: >-
-          {% set helper = 'input_boolean.' ~ room ~ '_day_separate_weekday_weekend' %}
-          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
-        evening_separate: >-
-          {% set helper = 'input_boolean.' ~ room ~ '_evening_separate_weekday_weekend' %}
-          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
-        night_separate: >-
-          {% set helper = 'input_boolean.' ~ room ~ '_night_separate_weekday_weekend' %}
-          {{ is_state(helper, 'on') if states(helper) not in ['unknown', 'unavailable'] else false }}
-        
-        # Check if today is a weekday (Mon-Fri) or weekend (Sat-Sun)
-        is_weekday: >-
-          {% set day = now().strftime('%A').lower() %}
-          {{ day in ['monday', 'tuesday', 'wednesday', 'thursday', 'friday'] }}
-
-        # Get schedule times
+        # Resolve Times
         s1_str: >-
-          {% if morning_custom %}
-            {% if morning_separate %}
-              {% if is_weekday %}
-                {% set v = states('input_datetime.' ~ room ~ '_s1_weekday_start') %}
-              {% else %}
-                {% set v = states('input_datetime.' ~ room ~ '_s1_weekend_start') %}
-              {% endif %}
-            {% else %}
-              {% set v = states('input_datetime.' ~ room ~ '_s1_start') %}
-            {% endif %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s1 }}{% else %}{{ v }}{% endif %}
+          {% if use_custom_schedule and use_custom_s1 %}
+            {% set v = states('input_datetime.' ~ room ~ '_s1_start') %}
+            {{ v if v not in ['unknown', 'unavailable', '', None] else global_s1 }}
           {% elif custom_s1_start is defined and custom_s1_start != '' %}
-            {% set v = states(custom_s1_start) %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s1 }}{% else %}{{ v }}{% endif %}
+             {{ states(custom_s1_start) }}
           {% else %}
-            {{ default_s1 }}
+             {{ global_s1 }}
           {% endif %}
+
         s2_str: >-
-          {% if day_custom %}
-            {% if day_separate %}
-              {% if is_weekday %}
-                {% set v = states('input_datetime.' ~ room ~ '_s2_weekday_start') %}
-              {% else %}
-                {% set v = states('input_datetime.' ~ room ~ '_s2_weekend_start') %}
-              {% endif %}
-            {% else %}
-              {% set v = states('input_datetime.' ~ room ~ '_s2_start') %}
-            {% endif %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s2 }}{% else %}{{ v }}{% endif %}
+          {% if use_custom_schedule and use_custom_s2 %}
+            {% set v = states('input_datetime.' ~ room ~ '_s2_start') %}
+            {{ v if v not in ['unknown', 'unavailable', '', None] else global_s2 }}
           {% elif custom_s2_start is defined and custom_s2_start != '' %}
-            {% set v = states(custom_s2_start) %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s2 }}{% else %}{{ v }}{% endif %}
+             {{ states(custom_s2_start) }}
           {% else %}
-            {{ default_s2 }}
+             {{ global_s2 }}
           {% endif %}
+
         s3_str: >-
-          {% if evening_custom %}
-            {% if evening_separate %}
-              {% if is_weekday %}
-                {% set v = states('input_datetime.' ~ room ~ '_s3_weekday_start') %}
-              {% else %}
-                {% set v = states('input_datetime.' ~ room ~ '_s3_weekend_start') %}
-              {% endif %}
-            {% else %}
-              {% set v = states('input_datetime.' ~ room ~ '_s3_start') %}
-            {% endif %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s3 }}{% else %}{{ v }}{% endif %}
+          {% if use_custom_schedule and use_custom_s3 %}
+            {% set v = states('input_datetime.' ~ room ~ '_s3_start') %}
+            {{ v if v not in ['unknown', 'unavailable', '', None] else global_s3 }}
           {% elif custom_s3_start is defined and custom_s3_start != '' %}
-            {% set v = states(custom_s3_start) %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s3 }}{% else %}{{ v }}{% endif %}
+             {{ states(custom_s3_start) }}
           {% else %}
-            {{ default_s3 }}
+             {{ global_s3 }}
           {% endif %}
+
         s4_str: >-
-          {% if night_custom %}
-            {% if night_separate %}
-              {% if is_weekday %}
-                {% set v = states('input_datetime.' ~ room ~ '_s4_weekday_start') %}
-              {% else %}
-                {% set v = states('input_datetime.' ~ room ~ '_s4_weekend_start') %}
-              {% endif %}
-            {% else %}
-              {% set v = states('input_datetime.' ~ room ~ '_s4_start') %}
-            {% endif %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s4 }}{% else %}{{ v }}{% endif %}
+          {% if use_custom_schedule and use_custom_s4 %}
+            {% set v = states('input_datetime.' ~ room ~ '_s4_start') %}
+            {{ v if v not in ['unknown', 'unavailable', '', None] else global_s4 }}
           {% elif custom_s4_start is defined and custom_s4_start != '' %}
-            {% set v = states(custom_s4_start) %}
-            {% if v in ['unknown','unavailable',''] %}{{ default_s4 }}{% else %}{{ v }}{% endif %}
+             {{ states(custom_s4_start) }}
           {% else %}
-            {{ default_s4 }}
+             {{ global_s4 }}
           {% endif %}
 
         now_ts: "{{ as_timestamp(now()) }}"
