--- a/gitops/apps/home-assistant/helpers-input-datetime-configmap.yaml
+++ b/gitops/apps/home-assistant/helpers-input-datetime-configmap.yaml
@@ -8,52 +8,24 @@ data:
     # Usage:
     #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
     
+    # Custom Room Schedule Times (Used when bathroom_custom_schedule is ON)
     bathroom_s1_start:
       name: Bathroom Morning start
       has_time: true
       has_date: false
-    bathroom_s1_weekday_start:
-      name: Bathroom Morning Weekday start
-      has_time: true
-      has_date: false
-    bathroom_s1_weekend_start:
-      name: Bathroom Morning Weekend start
-      has_time: true
-      has_date: false
+    
     bathroom_s2_start:
       name: Bathroom Day start
       has_time: true
       has_date: false
-    bathroom_s2_weekday_start:
-      name: Bathroom Day Weekday start
-      has_time: true
-      has_date: false
-    bathroom_s2_weekend_start:
-      name: Bathroom Day Weekend start
-      has_time: true
-      has_date: false
+    
     bathroom_s3_start:
       name: Bathroom Evening start
       has_time: true
       has_date: false
-    bathroom_s3_weekday_start:
-      name: Bathroom Evening Weekday start
-      has_time: true
-      has_date: false
-    bathroom_s3_weekend_start:
-      name: Bathroom Evening Weekend start
-      has_time: true
-      has_date: false
+    
     bathroom_s4_start:
       name: Bathroom Night start
-      has_time: true
-      has_date: false
-    bathroom_s4_weekday_start:
-      name: Bathroom Night Weekday start
-      has_time: true
-      has_date: false
-    bathroom_s4_weekend_start:
-      name: Bathroom Night Weekend start
       has_time: true
       has_date: false
   bedroom.yaml: |
@@ -61,105 +33,73 @@ data:
     # Usage:
     #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
     
+    # Custom Room Schedule Times (Used when bedroom_custom_schedule is ON)
     bedroom_s1_start:
       name: Bedroom Morning start
       has_time: true
       has_date: false
-    bedroom_s1_weekday_start:
-      name: Bedroom Morning Weekday start
-      has_time: true
-      has_date: false
-    bedroom_s1_weekend_start:
-      name: Bedroom Morning Weekend start
-      has_time: true
-      has_date: false
+    
     bedroom_s2_start:
       name: Bedroom Day start
       has_time: true
       has_date: false
-    bedroom_s2_weekday_start:
-      name: Bedroom Day Weekday start
-      has_time: true
-      has_date: false
-    bedroom_s2_weekend_start:
-      name: Bedroom Day Weekend start
-      has_time: true
-      has_date: false
+    
     bedroom_s3_start:
       name: Bedroom Evening start
       has_time: true
       has_date: false
-    bedroom_s3_weekday_start:
-      name: Bedroom Evening Weekday start
-      has_time: true
-      has_date: false
-    bedroom_s3_weekend_start:
-      name: Bedroom Evening Weekend start
-      has_time: true
-      has_date: false
+    
     bedroom_s4_start:
       name: Bedroom Night start
       has_time: true
       has_date: false
-    bedroom_s4_weekday_start:
-      name: Bedroom Night Weekday start
+  global_schedule.yaml: |
+    global_morning_start:
+      name: Global Morning Start
       has_time: true
       has_date: false
-    bedroom_s4_weekend_start:
-      name: Bedroom Night Weekend start
+      initial: "06:30:00"
+    
+    global_day_start:
+      name: Global Day Start
       has_time: true
       has_date: false
+      initial: "10:30:00"
+    
+    global_evening_start:
+      name: Global Evening Start
+      has_time: true
+      has_date: false
+      initial: "18:00:00"
+    
+    global_night_start:
+      name: Global Night Start
+      has_time: true
+      has_date: false
+      initial: "23:00:00"
   hallway.yaml: |
     # Template for input_datetime helpers per room
     # Usage:
     #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
     
+    # Custom Room Schedule Times (Used when hallway_custom_schedule is ON)
     hallway_s1_start:
       name: Hallway Morning start
       has_time: true
       has_date: false
-    hallway_s1_weekday_start:
-      name: Hallway Morning Weekday start
-      has_time: true
-      has_date: false
-    hallway_s1_weekend_start:
-      name: Hallway Morning Weekend start
-      has_time: true
-      has_date: false
+    
     hallway_s2_start:
       name: Hallway Day start
       has_time: true
       has_date: false
-    hallway_s2_weekday_start:
-      name: Hallway Day Weekday start
-      has_time: true
-      has_date: false
-    hallway_s2_weekend_start:
-      name: Hallway Day Weekend start
-      has_time: true
-      has_date: false
+    
     hallway_s3_start:
       name: Hallway Evening start
       has_time: true
       has_date: false
-    hallway_s3_weekday_start:
-      name: Hallway Evening Weekday start
-      has_time: true
-      has_date: false
-    hallway_s3_weekend_start:
-      name: Hallway Evening Weekend start
-      has_time: true
-      has_date: false
+    
     hallway_s4_start:
       name: Hallway Night start
-      has_time: true
-      has_date: false
-    hallway_s4_weekday_start:
-      name: Hallway Night Weekday start
-      has_time: true
-      has_date: false
-    hallway_s4_weekend_start:
-      name: Hallway Night Weekend start
       has_time: true
       has_date: false
   kitchen.yaml: |
@@ -167,52 +107,24 @@ data:
     # Usage:
     #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
     
+    # Custom Room Schedule Times (Used when kitchen_custom_schedule is ON)
     kitchen_s1_start:
       name: Kitchen Morning start
       has_time: true
       has_date: false
-    kitchen_s1_weekday_start:
-      name: Kitchen Morning Weekday start
-      has_time: true
-      has_date: false
-    kitchen_s1_weekend_start:
-      name: Kitchen Morning Weekend start
-      has_time: true
-      has_date: false
+    
     kitchen_s2_start:
       name: Kitchen Day start
       has_time: true
       has_date: false
-    kitchen_s2_weekday_start:
-      name: Kitchen Day Weekday start
-      has_time: true
-      has_date: false
-    kitchen_s2_weekend_start:
-      name: Kitchen Day Weekend start
-      has_time: true
-      has_date: false
+    
     kitchen_s3_start:
       name: Kitchen Evening start
       has_time: true
       has_date: false
-    kitchen_s3_weekday_start:
-      name: Kitchen Evening Weekday start
-      has_time: true
-      has_date: false
-    kitchen_s3_weekend_start:
-      name: Kitchen Evening Weekend start
-      has_time: true
-      has_date: false
+    
     kitchen_s4_start:
       name: Kitchen Night start
-      has_time: true
-      has_date: false
-    kitchen_s4_weekday_start:
-      name: Kitchen Night Weekday start
-      has_time: true
-      has_date: false
-    kitchen_s4_weekend_start:
-      name: Kitchen Night Weekend start
       has_time: true
       has_date: false
   living_room.yaml: |
@@ -220,51 +132,23 @@ data:
     # Usage:
     #   jinja2 input_datetime_template.yaml.j2 -D room=bedroom > input_datetime/bedroom.yaml
     
+    # Custom Room Schedule Times (Used when living_room_custom_schedule is ON)
     living_room_s1_start:
       name: Living Room Morning start
       has_time: true
       has_date: false
-    living_room_s1_weekday_start:
-      name: Living Room Morning Weekday start
-      has_time: true
-      has_date: false
-    living_room_s1_weekend_start:
-      name: Living Room Morning Weekend start
-      has_time: true
-      has_date: false
+    
     living_room_s2_start:
       name: Living Room Day start
       has_time: true
       has_date: false
-    living_room_s2_weekday_start:
-      name: Living Room Day Weekday start
-      has_time: true
-      has_date: false
-    living_room_s2_weekend_start:
-      name: Living Room Day Weekend start
-      has_time: true
-      has_date: false
+    
     living_room_s3_start:
       name: Living Room Evening start
       has_time: true
       has_date: false
-    living_room_s3_weekday_start:
-      name: Living Room Evening Weekday start
-      has_time: true
-      has_date: false
-    living_room_s3_weekend_start:
-      name: Living Room Evening Weekend start
-      has_time: true
-      has_date: false
+    
     living_room_s4_start:
       name: Living Room Night start
-      has_time: true
-      has_date: false
-    living_room_s4_weekday_start:
-      name: Living Room Night Weekday start
-      has_time: true
-      has_date: false
-    living_room_s4_weekend_start:
-      name: Living Room Night Weekend start
       has_time: true
       has_date: false
